--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="210.0" prefWidth="175.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Pane prefHeight="210.0" prefWidth="175.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="itemImage" fitHeight="134.0" fitWidth="175.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="itemImage" fitHeight="134.0" fitWidth="175.0" onMouseClicked="#onClick" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="itemLabel" layoutX="60.0" layoutY="134.0" text="Varunamn" />
             <Label fx:id="priceLabel" layoutX="71.0" layoutY="151.0" text="pris kr" />
             <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="45.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
