--- a/src/main/Product/Product.fxml
+++ b/src/main/Product/Product.fxml
@@ -16,7 +16,9 @@
             <ImageView fx:id="minusImage" fitHeight="30.0" fitWidth="30.0" layoutX="45.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
             <ImageView fx:id="plusImage" fitHeight="30.0" fitWidth="30.0" layoutX="100.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="amountLabel" layoutX="84.0" layoutY="175.0" text="x" />
-            <Button fx:id="buyButton" layoutX="38.0" layoutY="166.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="104.0" text="Button" />
+            <Button fx:id="addButton" layoutX="104.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#onPlusButtonPressed" prefHeight="36.0" prefWidth="36.0" text="+" />
+            <Button fx:id="removeButton" layoutX="38.0" layoutY="165.0" mnemonicParsing="false" onMouseClicked="#onMinusButtonPressed" prefHeight="36.0" prefWidth="36.0" text="-" />
+            <Button fx:id="buyButton" layoutX="38.0" layoutY="166.0" mnemonicParsing="false" onMouseClicked="#onBuyButtonPressed" prefHeight="36.0" prefWidth="104.0" text="Köp" />
          </children>
       </Pane>
    </children>
